css/style.less
@import "css/font.less";

@statusbar-height: 1.2rem;
@statusbar-background: #166163;
@statusbar-dirty-background: #6f0c0c;
@statusbar-padding: 0.3ch;
@gutter-lines-spacing: 0ch;
@font-family: "iosevka";
@line-height: 23px;
@font-size: 17px;
@body-background: #272922;
@body-color: contrast(@body-background);
@gutter-color: lighten(@body-background, 40%);
@ruler: 80ch;

html, body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  font-family: "@{font-family}";
  font-size: @line-height;
  color: @body-color;
  background: @body-background;
  font-variant-ligatures: common-ligatures;
  font-weight: 300;
}

.editor {
  height: 100%;
  font-size: @font-size;
  display: flex;
  flex-direction: column;
}

.buffer {
  display: flex;
  flex-direction: row;
  flex-grow: 1;
  width: 100%;
  height: 100%;
  overflow-y: hidden;
}

.lines-container {
  flex: 1;
  position: relative;
}

.lines-container:after {
  content: '';
  position: absolute;
  height: 100%;
  top: 0;
  left: @ruler;
  background: @body-background;
  width: calc(~"100% - @{ruler}");
  opacity: 0.5;
}

.gutter-container {
  background-image:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='@{line-height}' font-size='@{font-size}' font-family='@{font-family}' ><text x='0' y='10.5px' alignment-baseline='central' fill='@{gutter-color}'>~</text></svg>"); 
  background-repeat: repeat-y;
  user-select: none;
  margin-right: @gutter-lines-spacing;
}

.lines, .gutter {
  transition: transform 40ms ease-in;
}

.gutter {
  padding: 0 1ch;
}

.lines {
  position: relative;
}

.gutter {
  background: @body-background;
  color: @gutter-color;
}

.line, .line-number {
  white-space: pre;
  height: @line-height;
  line-height: @line-height;
  display: flex;
  align-items: center;
}

.cursor {
  position: absolute;
  width: 1ch;
  background: rgba(255,255,255,.5);
  white-space: pre;
  height: 0.86rem;
  padding: 0 0 1px 0;
  transform: translateY(0.1rem)
}

.status {
  width: 100%;
  background: linear-gradient(0deg, @statusbar-background, lighten(@statusbar-background, 2%));
  display: flex;
  flex-direction: row;
  align-items: center;
  height: @statusbar-height;
  white-space: pre;
  flex-grow: 0;
  flex-shirk: 1;
  position: relative;
  padding-left: @statusbar-padding;
  color: contrast(@statusbar-background);
}

.status.dirty {
  background: linear-gradient(0deg, @statusbar-dirty-background, lighten(@statusbar-dirty-background, 2%));
}

.status .cursor {
  transform: translate(0.2ch, (@statusbar-height - 1) / 2);
}

.status > div:first-child {
  padding-left: @gutter-lines-spacing;
}

.status-cmds {
  padding-left: 2ch;
}

.elm-overlay {
  font-size: 13px;
}

.selections {
}
.highlights div, .selections div {
  height: @line-height;
  position: absolute;
  background: lighten(@body-background, 15%);
}

.highlights div {
  filter: invert(100%);
}

